# networksecurity

./: .env  DockerFile  README.md  app.py  db_connection.py  main.py  pushdata.py  pyproject.toml  requirements.txt  setup.py
.github/workflow/: main.yml
Artifacts/05_17_2025_18_54_34/ingested/: test.csv  train.csv
Artifacts/05_18_2025_14_38_59/ingested/: train.csv
Artifacts/05_19_2025_01_10_01/ingested/: test.csv
Artifacts/05_19_2025_01_13_02/ingested/: train.csv
Artifacts/05_19_2025_01_30_09/ingested/: test.csv
Artifacts/05_19_2025_01_33_50/ingested/: test.csv
Artifacts/05_19_2025_01_35_56/ingested/: train.csv
Artifacts/05_19_2025_01_39_08/ingested/: train.csv
Artifacts/05_19_2025_01_41_05/ingested/: test.csv
Artifacts/05_19_2025_04_08_59/ingested/: train.csv
Artifacts/05_19_2025_04_11_49/ingested/: test.csv  train.csv
Artifacts/05_19_2025_04_14_09/ingested/: test.csv  train.csv
Artifacts/05_19_2025_04_21_05/ingested/: train.csv
data_schema/: schema.yaml
final_models/: model.pkl  preprocessor.pkl
mlruns/0/: meta.yaml
networksecurity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
networksecurity/cloud/: s3_syncer.py
networksecurity/components/: DataIngestion.py  DataTranformation.py  DataValidation.py  Model_trainer.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
predictionData/: output.csv
templates/: table.html
valid_data/: test.csv  testdata.py
(+155 files in other folders)
