[project]
name = "networksecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.4.26",
    "dill>=0.4.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyaml>=25.1.0",
    "pymongo[srv]>=4.0.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "setuptools>=80.4.0",
]
